fix dark mode text on timetable

--- a/src/inject/injected.css
+++ b/src/inject/injected.css
@@ -309,6 +309,7 @@ ol:has(.MessageList__avatar___2wxyb svg) {
 #container #content {
   border-radius: 16px;
   bottom: unset !important;
+  height: 100%;
   -webkit-box-shadow: 0px 5px 16px 6px rgba(0, 0, 0, 0.2) !important;
   box-shadow: 0px 5px 16px 6px rgba(0, 0, 0, 0.2) !important;
 }
@@ -1391,6 +1392,10 @@ ul {
 
 .days td {
   overflow: hidden;
+}
+
+.header .days .title {
+  color: var(--text-primary);
 }
 
 div.entry.class {
